# ds-caselaw-privileged-api

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  openapi.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  codeql.yml  release.yml  secrets.yml
.openapi-generator/: FILES
script/: server  setup-localstack.sh  test
src/: s3.py
src/openapi_server/: connect.py  main.py  security_api.py
src/openapi_server/apis/: reading_api.py  status_api.py  utils.py  writing_api.py
tests/: conftest.py  test_reading_api.py  test_status_api.py  test_utils.py  test_writing_api.py
