[project]
requires-python = ">=3.12, <4"

[tool.black]
line-length = 88
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.ruff]
ignore = ["S101", "E501", "G004", "PLR2004", "RUF005", "RUF012"]
extend-select = ["W", "B", "Q", "C90", "I", "UP", "YTT", "ASYNC", "S", "BLE", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA",
                 "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "PTH",
                 "FIX", "PGH", "PL", "TRY", "FLY", "PERF", "RUF"]
unfixable = ["ERA"]

[tool.poetry]
name = "ds-caselaw-privileged-api"
version = "0.3.0"
description = ""
authors = ["David McKee <david.mckee@dxw.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <4"
fastapi = ">=0.103.2"
python-dotenv = ">=1.0.0"
ds-caselaw-marklogic-api-client = "18.0.0"
django-environ = ">=0.11.2"
requests = {extras = ["use-chardet-on-py3"], version = ">=2.31.0"}
requests-toolbelt = ">=1.0.0"
lxml = ">= 4.9.3"
httpx = ">= 0.25.0"
uvicorn = ">= 0.23.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
