[project]
requires-python = ">=3.12, <4"

[tool.poetry]
name = "ds-caselaw-privileged-api"
version = "0.3.0"
description = ""
authors = ["David McKee <david.mckee@dxw.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <4"
fastapi = ">=0.103.2"
python-dotenv = ">=1.0.0"
ds-caselaw-marklogic-api-client = "35.1.1"
django-environ = ">=0.11.2"
requests = {extras = ["use-chardet-on-py3"], version = ">=2.31.0"}
requests-toolbelt = ">=1.0.0"
lxml = ">= 4.9.3"
httpx = ">= 0.25.0"
uvicorn = ">= 0.23.2"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501", "G004", "PLR2004", "RUF005", "RUF012", "UP040"] # long lines, fstrings in logs, magic values, consider not concat, mutable classbits, type instead of TypeAlias
extend-select = ["W", "B", "Q", "C90", "I", "UP", "YTT", "ASYNC", "S", "BLE", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA",
                 "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "PTH",
                 "FIX", "PGH", "PL", "TRY", "FLY", "PERF", "RUF"]
unfixable = ["ERA"]

# things skipped:
# N: naming, possibly good
# D: docstrings missing throughout
# ANN: annotations missing throughout
# FBT: not convinced boolean trap worth auto-banning.
# CPY: copyright at top of each file
# G: logging warnings -- fstrings bad?
# ARG: sometimes you need to accept arguments.
# TD: somewhat finicky details about formatting TODOs
# FIX: flags todos: possible to add -- skipped for now
# ERA: lots of false positives, not a good autofix
# PD, NPY, AIR: ignored, panda / numpy / airflow specific
# FURB: not yet out of preview

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["S101"]
